<resources>
    <string name="app_name">MyWeatherApp</string>
    <string name="get_weather">Россия, Амурская обл, г Благовещенск</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Здесь будет прогноз погоды на неделю</string>
    <string name="iv_item_weather_icon">Weather icon</string>
    <string name="feels_like_temp">Ощущается как </string>
    <string name="weather_icon">Icon of weather</string>

    <string name="title_current_weather">Сегодня</string>
    <string name="title_week_forecast">Неделя</string>
    <string name="title_map_fragment">Карта</string>
    <string name="pop">80%</string>
    <string name="enter_city_name">Введите название города...</string>
</resources>