<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7ECDF1"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_search_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_search_city"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="top"
            android:hint="@string/enter_city_name"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.cardview.widget.CardView>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="330dp"
    app:layout_constraintStart_toStartOf="parent"
    android:elevation="3dp"
    android:padding="1dp"
    android:layout_marginTop="-8dp"
    app:layout_constraintTop_toBottomOf="@+id/cv_search_city">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="48dp"
        android:background="#F8F7F7"
        android:elevation="5dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_search_city"
        tools:itemCount="5"
        tools:listitem="@layout/searched_city_item"
        tools:visibility="visible" />
</FrameLayout>




    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/subYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cv_search_city" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cw_rv_hourly_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="16dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cw_main_weather">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hourly_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layoutAnimation="@anim/hourly_weather_anim"
            android:visibility="gone"
            tools:listitem="@layout/hourly_weather_item" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cw_main_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_search_city">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_current_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:padding="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:visibility="visible">

            <TextView
                android:id="@+id/load_weather_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="18sp"

                android:text="@string/get_weather"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/iv_weather_icon"
                tools:text="Облачно с прояснениями" />

            <ImageView
                android:id="@+id/iv_weather_icon"
                android:layout_width="120dp"
                android:layout_height="110dp"
                android:layout_marginTop="116dp"
                android:contentDescription="@string/weather_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tv_current_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_description"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_weather_icon"
                tools:text="18\u00B0С" />

            <TextView
                android:id="@+id/tv_feels_like_temp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_description"

                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.56"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_description"
                tools:text="Ощущается как 18\u00B0С" />

            <TextView
                android:id="@+id/tv_current_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tv_current_temp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"

                app:layout_constraintStart_toStartOf="parent"
                tools:text="21 июня 11:33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>